Improved code and fixed Username on mobile

--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ h1 {
   transition: font-size 100ms, color 500ms;
 }
 
-.counter {
+.counter,
+.Username_div {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -40,9 +41,7 @@ h1 {
   left: 10px;
 }
 
-.Scores,
-.Username,
-input {
+.Scores {
   position: absolute;
   color: rgb(100, 100, 100);
   left: 10px;
@@ -56,41 +55,36 @@ input {
   color: white;
 }
 
-.Username,
-input {
-  margin: auto;
-  text-align: center;
+.Username_div {
+  position: absolute;
+  top: 5px;
 }
 
 .Username {
-  top: 5px;
-  left: 0;
-  right: 139px;
+  color: rgb(100, 100, 100);
 }
 
 input {
-  top: 10.5px;
+  margin-left: 5px;
   font-size: 25px;
   color: black;
   background-color: rgb(100, 100, 100);
+  text-align: center;
   border: 0;
   border-radius: 2px;
-  left: 150px;
-  right: 0;
   width: 125px;
   height: 28px;
 }
 
 input:focus {
   outline: none;
-  box-shadow: none;
-  border: none !important;
 }
 
 /* Text gradient animation */
 .Gradient-animation {
   --bg-size: 400%;
-  background: linear-gradient(90deg,
+  background: linear-gradient(
+      90deg,
       rgb(255, 0, 0),
       rgb(255, 149, 0),
       rgb(255, 255, 0),
@@ -98,7 +92,9 @@ input:focus {
       rgb(0, 200, 255),
       rgb(0, 0, 255),
       rgb(200, 0, 255),
-      rgb(255, 0, 0)) 0 0 / var(--bg-size) 100%;
+      rgb(255, 0, 0)
+    )
+    0 0 / var(--bg-size) 100%;
   color: transparent !important;
   background-clip: text;
   animation: move-bg 75s linear infinite;
@@ -134,38 +130,28 @@ input:focus {
   .Scores {
     left: 5px;
   }
-
+  .Username_div {
+    top: 0px;
+  }
   .best,
   .Username {
     right: 5px;
   }
-
-  .Username {
-    top: 0px;
-    right: 135px;
+  .best {
+    top: 30px;
   }
-
-  input {
-    top: 5px;
-    left: 135px;
-  }
-
   #top_1 {
     top: 60px !important;
   }
-
   #top_2 {
     top: 90px !important;
   }
-
   #top_3 {
     top: 120px !important;
   }
-
   #top_4 {
     top: 150px !important;
   }
-
   #top_5 {
     top: 180px !important;
   }
